--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
   <div class="container">
     <p class="section-label">About</p>
     <p class="about-text">
-      I'm a Computer Science graduate from Tecnológico de Monterrey with hands-on experience at the intersection of machine learning, NLP, and applied AI. My work spans from building plagiarism detection systems using TF-IDF and AST parsing to deploying CNN-based classifiers via REST APIs. I'm currently completing a Graduate Certificate in AI at Georgian College in Canada, where I'm building a stronger foundation in machine learning and applied AI."
+      I'm a Computer Science graduate from Tecnológico de Monterrey with hands-on experience at the intersection of machine learning, NLP, and applied AI. My work spans from building plagiarism detection systems using TF-IDF and AST parsing to deploying CNN-based classifiers via REST APIs. I'm currently completing a Graduate Certificate in AI at Georgian College in Canada, where I'm building a stronger foundation in machine learning and applied AI.
     </p>
     <p class="about-text" style="margin-top:1rem;">
       I approach engineering with a blend of academic rigor and pragmatic delivery; equally comfortable prototyping research ideas and shipping scalable solutions. With industry experience in cybersecurity automation at KPMG Mexico and an international academic background including a semester at Kyungpook National University, South Korea, I bring a global and cross-disciplinary perspective to every project.
