--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;1,9..40,300&family=DM+Mono:wght@300;400&display=swap" rel="stylesheet" />
 <style>
+    @media (prefers-color-scheme: dark) {
+    :root {
+      color-scheme: light;
+    }
+  }
   :root {
     --bg: #f4f3f1;
     --surface: #edecea;
